<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context="id.kotlin.sample.ktx.uri.UriActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_uri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/menu_uri"
        app:titleTextColor="@color/colorPrimary" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_uri"
        android:layout_margin="8dp"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/button_call"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />
</RelativeLayout>